--- a/src/website/parent.html
+++ b/src/website/parent.html
@@ -278,7 +278,7 @@
         // setup Send button handler
         $('#send-intent').on('click', function(event) {
           event.preventDefault();
-          sendUtterance('Buy Flowers');
+          sendUtterance('Cross border fees');
         });
 
 
