--- a/src/website/parent.html
+++ b/src/website/parent.html
@@ -9,9 +9,10 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   </head>
   <body>
-    <div class="container-fluid"><!-- main container -->
-      <h1>Lex Chatbot UI Sample Parent Page</h1>
-      <p class="lead">
+    <!-- main container -->
+    <div class="container-fluid">
+      <h1>CarRentals Chatbot for Cross Border Fee (UAT)</h1>
+<!--       <p class="lead">
         Use the chatbot UI to drive your bot. This page will dynamically
         update using the associated Lex variables as the bot dialog progresses.
       </p>
@@ -110,15 +111,16 @@
           </div>
         </div>
       </div>
-    </div><!-- main container -->
+    </div> -->
+    <!-- main container -->
 
     <!-- babel-polyfill required for IE 11 -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-polyfill/6.26.0/polyfill.min.js" integrity="sha256-WRc/eG3R84AverJv0zmqxAmdwQxstUpqkiE+avJ3WSo=" crossorigin="anonymous"></script>
 
     <!-- jquery used as part on this example - not required by lex-web-ui -->
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
-    <!-- bootstrap used as part of thie example - not required by lex-web-ui -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <!-- bootstrap used as part of this example - not required by lex-web-ui -->
+    <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script> -->
     <!--
       Loader script tag
 
