--- a/src/website/parent.html
+++ b/src/website/parent.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="https://www.carrentals.com/favicon.ico">
-    <title>Chatbot UI iFrame Example</title>
+    <title>CarRentals Chatbot</title>
     <!--  bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <style type="text/css" media="screen">
@@ -212,7 +212,7 @@
           // origin hosting the HTML file that will be embedded in the iframe
           // iframeOrigin: 'https://iframe-host.example.org'
           iframeOrigin: window.location.origin,
-          shouldLoadIframeMinimized: false //must set here when used iframe. 
+          shouldLoadIframeMinimized: false //must set here when used iframe.
         }
 
       };
